优化了java的相关的内容，确保知识点更连续